{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 13,
  "lineage": "2a5d3c84-1c9b-3917-99f3-f94f24028977",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782823230069:loadbalancer/net/web-ui/2fe1b6fbe14e2f96",
            "arn_suffix": "net/web-ui/2fe1b6fbe14e2f96",
            "dns_name": "web-ui-2fe1b6fbe14e2f96.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:782823230069:loadbalancer/net/web-ui/2fe1b6fbe14e2f96",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "web-ui",
            "security_groups": [
              "sg-02a3437167c66417d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0423a1b05695ac070"
              },
              {
                "subnet_id": "subnet-0b9e3ce12a1c5ae9f"
              }
            ],
            "subnets": [
              "subnet-0423a1b05695ac070",
              "subnet-0b9e3ce12a1c5ae9f"
            ],
            "vpc_id": "vpc-05bb20e5204f2c6b4",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.ecs.aws_security_group.lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782823230069:targetgroup/my-targets/ddc02514320a2a6c",
            "arn_suffix": "targetgroup/my-targets/ddc02514320a2a6c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:782823230069:targetgroup/my-targets/ddc02514320a2a6c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-targets",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05bb20e5204f2c6b4"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782823230069:security-group/sg-0699770c56dbbb37e",
            "description": "Allow inbound traffic",
            "egress": [],
            "id": "sg-0699770c56dbbb37e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "fargate_sg",
            "name_prefix": "",
            "owner_id": "782823230069",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bb20e5204f2c6b4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782823230069:security-group/sg-02a3437167c66417d",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-02a3437167c66417d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8444,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8444
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "782823230069",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bb20e5204f2c6b4"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}